# BlackSwanDB

./: .gitignore  LICENCE  README.md  pyproject.toml
blackswan/parquet/: pokemon_archive-1.parquet  pokemon_archive-2.parquet
examples/pokemon_db/: pokemon_archive-1.csv  pokemon_archive-2.csv
src/blackswandb/: __init__.py  db.py  exceptions.py  io.py  sql.py  update.py  utils.py
tests/: test_basic.py
