[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blackswandb"
version = "0.1.0"
description = "A lightweight DuckDB + Parquet database for time series and tabular datasets."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Duke Faloppa", email = "phi.bruni@gmail.com" }
]

keywords = [
    "duckdb",
    "parquet",
    "database",
    "timeseries",
    "pandas",
    "analytics"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Database",
    "Topic :: Scientific/Engineering"
]

dependencies = [
    "duckdb>=1.0",
    "pandas>=2.1",
    "pyarrow>=15.0",
    "openpyxl>=3.1"
]

[project.optional-dependencies]

dev = [
    "pytest",
    "pytest-cov",
    "black",
    "ruff",
    "build",
    "twine"
]

[project.urls]
Homepage = "https://github.com/<username>/BlackSwanDB"
Repository = "https://github.com/<username>/BlackSwanDB"
Issues = "https://github.com/<username>/BlackSwanDB/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py310"